WIP: Save local changes before rebase

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/js-yaml": "^4.0.9",
     "framer-motion": "^12.5.0",
+    "js-yaml": "^4.1.0",
+    "js-yaml-loader": "^1.2.2",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
